# FinanceMeta-Global

./: README.md  pyproject.toml  setup.py
FI-JEPA/: LICENSE  README.md
configs/: loader.py
configs/datasets/: crypto.yaml  equities.yaml  macro.yaml
configs/experiments/: regime_detection.yaml  return_prediction.yaml  volatility_forecasting.yaml
configs/model/: encoder_transformer.yaml  fi_jepa_base.yaml  fi_jepa_large.yaml
configs/training/: finetune.yaml  optimizer.yaml  pretrain.yaml
fi_jepa/: __init__.py
fi_jepa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fi_jepa/datasets/: feature_engineering.py  market_dataset.py  window_sampler.py
fi_jepa/encoders/: embeddings.py  ssm_encoder.py  tcn_encoder.py  transformer_encoder.py
fi_jepa/losses/: latent_prediction.py  liquidity_regularizer.py  macro_regularizer.py  no_arbitrage.py  representation.py  volatility_regularizer.py
fi_jepa/models/: context_encoder.py  fi_jepa.py  heads.py  operator_modules.py  predictor_bank.py  target_encoder.py
fi_jepa/predictors/: liquidity_operator.py  macro_operator.py  residual_operator.py  volatility_operator.py
fi_jepa/training/: ema.py  finetune.py  pretrain.py  trainer.py
fi_jepa/utils/: config.py  logging.py  plotting.py  seed.py
scripts/: train_fi_jepa.py
